throw exception while creating token for paused queue